# rbkairos_etf_vision

./: CMakeLists.txt  CMakeLists.txt.save  README.md  package.xml
jetson_yolo/scripts/: visualize_detections.py
launch/: vision_full.launch
scripts/: .gitignore  README.md  detect_and_grasp.py  extrinsic_matrix.py  get_base_pose.py  run_actions.sh  run_grasp_action.py  static_transform.py  visualize_detections.py
src/: yolo_node.cpp
